# newspaperV3

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  outputRun.txt  pushVersion  pyproject.toml  requirements.txt  tox.ini
newspaperV3/: article.py  extractors.py  version.py
newspaperV3/resources/text/: stopwords-ar.txt
reports/: date_mismatched.csv  date_regressions.csv  errors.csv  title_failed.csv  title_mismatched.csv
